2008-01-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/hildon-1/hildon-1.gi, vapi/hildon-1.vapi: regenerated,
	  fixes issue with Hildon.BreadCrumb

2008-01-11  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/: update from gobject-introspection SVN,
	  fixes bug 505920

	* vapigen/vala-gen-introspect/vala-gen-introspect.in: fix to work
	  with updated gobject-introspection

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-desktop-2.0/: update to gnome-desktop 2.21.4

	* vapi/gnome-desktop-2.0.vapi: regenerated

	* vapi/gnome-desktop-2.0.deps, vapi/Makefile.am: add dependency file

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: update to glib 2.15.1

	* vapi/gio-2.0.vapi: regenerated

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormethod.vala, compiler/valacompiler.vala,
	  vapi/glib-2.0.vapi, vapigen/valavapigen.vala: fix memory management
	  of out parameters, fixes bug 501838

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala: fix memory management of property
	  getters with ownership transfer, fixes bug 505713

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix binding of textdomain, fixes bug 508453

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix gtk_window_get_position

	* vapi/gtk+-2.0.vapi: regenerated

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix memory management of string
	  literals

2008-01-10  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check in/ref/out arguments

	* vapi/packages/gtk+-2.0/gtk+-2.0-custom.vala: fix gtk_init

	* vapi/gtk+-2.0.vapi: regenerated

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add bindings for uri functions

2008-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix gtk_accelerator_parse
